--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A small wrapper library to help with responsive intrinsic-sized Flexbox layouts that wrap based on content and container width and avoiding viewport-based media queries.",
   "main": "index.js",
   "scripts": {
-    "build": "npx @11ty/eleventy --config=demo-src/eleventy.config.js --input=demo-src --output=demo",
+    "build": "npx @11ty/eleventy --config=demo-src/eleventy.config.js --input=demo-src --output=docs",
     "serve": "npm run build -- --serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
