--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx @11ty/eleventy --config=demo-src/eleventy.config.js --input=demo-src --output=docs",
-    "serve": "npm run build -- --serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "npm run build -- --serve"
   },
   "keywords": [
     "responsive",
@@ -22,6 +21,6 @@
   "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^0.9.0",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.0"
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1"
   }
 }
